feat: make it possible to trigger admin jobs for a certain duration
